--- a/crds.toml
+++ b/crds.toml
@@ -19,6 +19,10 @@ apiVersion = 'crd.projectcalico.org/v1'
 url = 'https://docs.projectcalico.org/archive/v3.20/manifests/crds.yaml'
 
 [[crds]]
+apiVersion = 'minio.min.io/v2'
+url = 'https://raw.githubusercontent.com/minio/operator/v4.2.14/manifests/tenants.minio.min.io.crd.yaml'
+
+[[crds]]
 apiVersion = 'k8s.amaiz.com/v1alpha1'
 url = 'https://raw.githubusercontent.com/amaizfinance/redis-operator/v0.2.1/deploy/crds/k8s_v1alpha1_redis_crd.yaml'
 
