Update crd.projectcalico.org/v1 to v3.27.2

--- a/crds.toml
+++ b/crds.toml
@@ -20,7 +20,7 @@ url = 'https://github.com/jetstack/cert-manager/releases/download/v1.14.4/cert-m
 
 [[crds]]
 apiVersion = 'crd.projectcalico.org/v1'
-url = 'https://docs.projectcalico.org/archive/v3.25/manifests/crds.yaml'
+url = 'https://raw.githubusercontent.com/projectcalico/calico/v3.27.2/manifests/crds.yaml'
 
 [[crds]]
 apiVersion = 'networking.istio.io/v1alpha3'
